<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="13dp"
        tools:ignore="MissingClass">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:orientation="vertical">

            </LinearLayout>

            <ImageView
                android:id="@+id/slide_satu"
                android:layout_width="wrap_content"
                android:layout_height="159dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/main_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"

            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:onClick="clicMenu">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_makanan"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/menumakan" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            tools:ignore="MissingClass"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:onClick="clickOrder">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesan_makanan"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/menu" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            tools:ignore="MissingClass"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:onClick="clickTransaksi">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaksi"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/pembayaran" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:onClick="clickSetting">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengaturan"
                    android:textSize="18sp"
                    android:textColor="#5e5e5e"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/seting" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            tools:ignore="MissingClass"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:onClick="clickAbout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tentang_kami"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/icon_white" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:onClick="clickBack">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keluar"
                    android:textColor="#5e5e5e"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/logout" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/versi"/>


</LinearLayout>


